<resources>
    <string name="app_name">SavEnergy</string>
    <string name="title_activity_principal">Principal</string>
    <string name="usuario">Usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings de Menu de navegacion -->
    <string name="inicio">Inicio</string>
    <string name="conf_p">Configuración del perfil</string>
    <string name="consulta">Consulta tu Energía</string>
    <string name="consumida">Energía Consumida</string>
    <string name="generada">Energía Generada</string>
    <string name="facturacion">Facturación</string>
    <string name="c_sesion">Cerrar Sesión</string>
    <string name="user">Configuración del usuario</string>

    <!-- Strings de Menu de configuración -->
    <string name="c_perfil">Configurar Perfil</string>
    <string name="c_pass">Cambiar Contraseña</string>
    <string name="c_fact">Cambiar tipo de Tarifa y corte</string>

    <!-- Strings de Erores -->
    <string name="campo_obligatorio">Este campo es obligatorio</string>

    <!-- Strings de interfaz "REGISTRARSE" -->
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo Electronico</string>
    <string name="pass">Contraseña</string>
    <string name="re_pass">Repetir Contraseña</string>
    <string name="clave_prod">Clave del producto</string>
    <!-- Strings de errores "Registrarse" -->
    <string name="vacio">Este campo es obligatorio</string>
    <string name="correo_inv">Correo Inválido</string>
    <string name="correo_reg">Este correo ya se encuntra registrado</string>
    <string name="pass_inc">Sólo caracteres alfanuméricos</string>
    <string name="contrasenias">Las contraseñas deben coincidir</string>
    <string name="prod_reg">El producto ya tiene un cliente asignado</string>
    <string name="prod_inex">Este producto no existe</string>
    <string name="prod_in">Este producto esta desactivado</string>

    <!-- Stringa de interfaz "INICIO"-->
    <string name="inicia_sesion">Iniciar Sesión</string>
    <string name="title_activity_tarifas">Tarifas</string>
    <string name="o">Ó</string>
    <string name="cuenta">¿Aún no tienes una cuenta?</string>

    <!-- Strings de interfaz "Tarifas"-->
    <string name="tarifas">Tarifas</string>

    <!--Strings de interfaz "Bienvenido"-->
    <string name="bienvenido">Bienvenido</string>
    <string name="precio_actual">El precio por kWh/h actual es de $:</string>
    <string name="precio">0.697</string>
    <string name="electrica">Energía Electrica (CFE)</string>
    <string name="consumo_diario">Consumo de</string>
    <string name="kw">kW</string>
    <string name="sustentable">Energía Electrica Sustentable</string>
    <string name="fecha">Aqui aparecera la fecha</string>

    <!-- Strings de interfaz "Configuracion de Perfil" -->
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="correo_no_valido">El formato de correo no es válido</string>
    <string name="tarifa">Tarifa</string>
    <string name="foto">Cambiar foto de perfil</string>
    <string name="guardar">Guardar</string>

    <!-- String de interfaz "Inicio_Sesion" -->
    <string name="olvido">¿Olvidaste tu contraseña?</string>
    <string name="datos_inv">Correo o contraseña incorrectos</string>
    <string name="progres_bar">Iniciando...</string>

    <!-- String de interfaz "Configuración de corte" -->
    <string name="configura">Seleccione la próxima fecha de corte</string>
    <string name="configurar">Seleccione la nueva fecha de corte</string>
    <string name="cuota">Cuota</string>
    <string name="finalizar">Finalizar</string>

    <!-- String de interfaz "Configuración de contraseña" -->
    <string name="instruccion_contra">Escriba la nueva contraseña</string>

    <!-- String de interfaz "Energía Generada" -->
    <string name="generada_e">Energía Generada</string>

    <!-- String de interfaz "Energía Consumida" -->
    <string name="instruccion">Selecciona el periodo que deseas consultar</string>
    <string name="consumo_ec">Consumo</string>

    <!-- String de interfaz "Facturación" -->
    <string name="title">Detalles del cobro</string>
    <string name="titulo">Energía Electrica Consumida</string>
    <string name="total_electrica">Comercial (CFE)</string>
    <string name="total_sustentable">Sustentable Propia</string>
    <string name="periodo">Periodo</string>
    <string name="cero">0</string>
    <string name="fecha_inicio">Fecha de Inicio</string>
    <string name="fecha_termino">Fecha de Termino</string>
    <string name="dias">Días </string>
    <string name="periodo_select">Periodo Seleccionado</string>

</resources>
