<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miguelangel.savenergy.Configuracion_Perfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/btn_cambiar_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:padding="15dp"
                android:text="@string/foto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/txt_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo_electronico"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>

                <TextView
                    android:id="@+id/txt_tarifa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tarifa"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/et_tarifa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="8dp"
                    android:padding="15dp"
                    android:text="@string/guardar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
