<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miguelangel.savenergy.Energia_Consumida">

                        <!-- Contenedor ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- Cabecera del sistema -->
            <TextView
                android:id="@+id/txt_cabecera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruccion"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"/>
            <!-- Fin de la cabecera -->

            <!-- Contenedor de selección fecha -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txt_consumo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/consumo_diario"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sp_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <!-- Fin del contenedor de selección fecha -->

            <!-- Gráfica -->
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/grafica"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />
            <!-- Gráfica -->

            <!-- Contenedor de selección fecha -->
            <!-- Fin del contenedor de selección fecha -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/consumida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginTop="15dp"
                    android:text="@string/titulo"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="18sp"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txt_consumo_e_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:text="@string/total_electrica"
                    android:textColor="@color/electrica"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/energia_electrica_comercial" />

                    <TextView
                        android:id="@+id/tv_consumo_e_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:text="0"
                        android:textColor="@color/electrica"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_kwh_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kw"
                        android:textColor="@color/electrica"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_consumo_e_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginTop="15dp"
                    android:text="@string/total_sustentable"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/energia_electrica_sustentable" />

                <TextView
                    android:id="@+id/tv_consumo_e_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:text="0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_kwh_e_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kw"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
